Fixes alignment issues.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -21,6 +21,10 @@ body {
 	padding:0px 60px;
 }
 
+.widget {
+	clear: both;
+}
+
 /* ===============================
    0. STRUCTURE/HEADER
    =============================== */
@@ -121,15 +125,20 @@ button.btn {
 		color: @font-swatch6-color;
 	}
 	.widget .extendednavigation {
-		ul {
+		position: relative;
+		> ul {
 			list-style: none;
 			float: none;
 			overflow: hidden;
-			li {
+			> li {
+				padding-right: 20px;
 				&.folder .text, a {
 					padding:0px;
 				}
 				&.folder {
+					&:after {
+						top: 15px;
+					}
 					&:hover {
 						ul {
 							position: relative;
@@ -141,12 +150,11 @@ button.btn {
 				}
 			}
 		}
-		a.pull {
-			@media @mobile {
-				position: relative;
-				top: 0;
-				margin: 30px 0 0;
-			}
+		@media @mobile {
+			min-height: 60px;
+		}
+		.pull {
+			top: 0px;
 		}
 	}
 }
